# Document-RAG-Chatbot

./: LICENSE  README.md
document- RAG-Chatbot/document-rag-chatbot/: README.md  main.py  pyproject.toml
document- RAG-Chatbot/document-rag-chatbot/app/UI/: Streamlit_app.py
document- RAG-Chatbot/document-rag-chatbot/config/: settings.py
document- RAG-Chatbot/document-rag-chatbot/embeddings/: embedding_model.py
document- RAG-Chatbot/document-rag-chatbot/loaders/: docx_loader.py  image_model.py  pdf_loader.py
document- RAG-Chatbot/document-rag-chatbot/rag/: chatbot.py  retriever.py
document- RAG-Chatbot/document-rag-chatbot/utils/: text_splitter.py
document- RAG-Chatbot/document-rag-chatbot/vectorstore/: supabase_store.py
