[project]
name = "document-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "pillow>=12.2.0",
    "pypdf>=6.11.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "supabase>=2.30.0",
    "together>=2.12.0",
]
